refactor(steps): Converted Gauge step definitions to Cucumber expressions
- Replaced Gauge-style regex patterns with Cucumber's {string} and {int} parameter syntax
- Maintained bilingual support (Turkish/English)
- Improved step pattern readability and reduced regex complexity
- Ensured compatibility with Cucumber while preserving existing functionality