@@ -1,26 +1,24 @@
 package com.thy.base;
-import com.thoughtworks.gauge.AfterScenario;
-import com.thoughtworks.gauge.BeforeScenario;
+
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.chrome.ChromeDriver;
 import org.openqa.selenium.edge.EdgeDriver;
 import org.openqa.selenium.firefox.FirefoxDriver;
 import org.openqa.selenium.remote.RemoteWebDriver;
 import org.openqa.selenium.safari.SafariDriver;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 
 public class DriverManager {
-
-    public static final Logger logger = LoggerFactory.getLogger(DriverManager.class);
+    protected static WebDriver driver;
+    private static final Logger logger = LogManager.getLogger(DriverManager.class);
     private static final String DEFAULT_BROWSER = "CHROME";
     private static final String USE_GRID_PROPERTY = "useGrid";
     private static final String GRID_URL_PROPERTY = "gridUrl";
 
-    protected static WebDriver driver;
     private final BrowserConfig.BrowserType selectedBrowser;
     private final boolean useGrid;
     private final String gridUrl;
@@ -31,21 +29,13 @@ public class DriverManager {
         this.gridUrl = System.getProperty(GRID_URL_PROPERTY, "http://localhost:4444/wd/hub");
     }
 
-    @BeforeScenario
-    public void initializeTestEnvironment() {
-
-        driver = useGrid ? setupRemoteWebDriver() : setupLocalWebDriver();
-        maximizeBrowserWindow();
-
-        logger.info("Test is running {}.", useGrid ? "on Grid at URL: " + gridUrl : "locally");
-    }
-
-
-    @AfterScenario
-    public void cleanUpTestEnvironment() {
-        if (driver != null) {
-            driver.quit();
+    public WebDriver getDriver() {
+        if (driver == null) {
+            driver = useGrid ? setupRemoteWebDriver() : setupLocalWebDriver();
+            maximizeBrowserWindow();
+            logger.info("Test is running " + (useGrid ? "on Grid at URL: " + gridUrl : "locally"));
         }
+        return driver;
     }
 
     private WebDriver setupLocalWebDriver() {
@@ -59,16 +49,24 @@ public class DriverManager {
 
     private WebDriver setupRemoteWebDriver() {
         try {
-            URL gridUrl = new URL(this.gridUrl);
+            URI gridUri = URI.create(this.gridUrl);
             return switch (selectedBrowser) {
-                case CHROME -> new RemoteWebDriver(gridUrl, BrowserConfig.getChromeOptions());
-                case FIREFOX -> new RemoteWebDriver(gridUrl, BrowserConfig.getFirefoxOptions());
-                case EDGE -> new RemoteWebDriver(gridUrl, BrowserConfig.getEdgeOptions());
-                case SAFARI -> new RemoteWebDriver(gridUrl, BrowserConfig.getSafariOptions());
+                case CHROME -> new RemoteWebDriver(gridUri.toURL(), BrowserConfig.getChromeOptions());
+                case FIREFOX -> new RemoteWebDriver(gridUri.toURL(), BrowserConfig.getFirefoxOptions());
+                case EDGE -> new RemoteWebDriver(gridUri.toURL(), BrowserConfig.getEdgeOptions());
+                case SAFARI -> new RemoteWebDriver(gridUri.toURL(), BrowserConfig.getSafariOptions());
             };
         } catch (MalformedURLException e) {
-            logger.error("Invalid grid URL: {}", gridUrl, e);
+            logger.error("Invalid grid URL: " + gridUrl, e);
             throw new RuntimeException("Invalid grid URL: " + gridUrl, e);
+        }
+    }
+
+    public void cleanUpTestEnvironment() {
+        if (driver != null) {
+            driver.quit();
+            driver = null;
+            logger.info("WebDriver closed successfully");
         }
     }
 
